Update .gitignore to filter Kodi skin files

--- a/.gitignore
+++ b/.gitignore
@@ -26,7 +26,8 @@ $RECYCLE.BIN/
 .LSOverride
 
 # Icon must end with two \r
-Icon
+Icon
+
 
 # Thumbnails
 ._*
@@ -41,3 +42,18 @@ Icon
 Network Trash Folder
 Temporary Items
 .apdisk
+
+# =========================
+# Kodi files
+#==========================
+
+*.bat
+*.bak
+*.bk
+*.db
+*.xbt
+*.xpr
+excludes.txt
+tools/
+WorkingStuff/
+BUILD/
