--- a/.gitattributes
+++ b/.gitattributes
@@ -1,6 +1,9 @@
 # Auto detect text files and perform LF normalization
 * text=auto
 
+# These files are text and should be normalized (convert crlf =&gt; lf)
+*.xml      text
+
 # Custom for Visual Studio
 *.cs     diff=csharp
 *.sln    merge=union
